# rustico

./: CNAME  Cargo.toml  readme.md
.github/workflows/: cd.yaml  ci.yaml
examples/: Cargo.toml
examples/src/: main.rs
rustico/: Cargo.toml
rustico/src/: lib.rs
rustico_proc_macro/: Cargo.toml
