[package]
name = "rustico"
description = "Rust programming, in Spanish."
readme = "../readme.md"
license = "MIT"
homepage = "https://github.com/UltiRequiem/rustico"
keywords = ["spanish"]
authors = ["UltiRequiem"]
categories = ["acessability"]
version = "0.1.2"
edition = "2018"

[lib]
proc-macro = true
